# foglesting-web

./: .gitignore  admin.css  admin.html  admin.js  auth.html  auth.js  fix_all_script.py  i18n.js  index.html  main.js  manual.html  package-lock.json  package.json  privacidad.html  style.css  test_wsp.js  track.js  translations.js  version.json
admin-releases/: releases.json
api/: activate-license.js  admin-check.js  debug-diag.js  delete-diagnostic.js  delete-user.js  download.js  firebase-admin.js  geo.js  get-diagnostic.js  github-content.js  list-diagnostics.js  list-web-events.js  log-event.js  log-solver-run.js  promote-release.js  track-metric.js  track-web.js  update-release-visibility.js  upload-diagnostic.js  web-telemetry.js  whatsapp.js
docs/: DOCUMENTACION_TECNICA.md  FIRMA_DIGITAL.md
engine/: CMakeLists.txt  README.md  app.rc  build.ps1  run_gui.ps1  test_shuffle.cpp
engine/src/cli/: main.cpp
engine/src/core/: dxf.cpp  dxf.hpp  geometry.cpp  geometry.hpp  gpu_context.cpp  gpu_context.hpp  kernels.cl  nesting.cpp  nesting.hpp  perf_log.cpp  perf_log.hpp
engine/src/gui/: win32_app.cpp
engine/src/wasm/: wasm_binding.cpp
engine/tests/: core_tests.cpp
engine/tools/: tune_nesting.py  zig-ar.cmd  zig-cxx.cmd  zig-ranlib.cmd  zig-rc.cmd
engine/web/: app.js  worker.js
lib/: firebase-admin.js  github-content.js
online/: app.js  editor.css  editor.html  editor.js  index.html  modify_online.py  nesting.js  nesting.wasm  style.css  worker.js
online/assets/: demo_parts.dxf
